[package]
name = "opentracing-api"
version = "0.1.0" # remember to update html_root_url
authors = ["The OpenTracing Developers"]
license = "Apache-2.0"
homepage = "http://opentracing.io"
repository = "https://github.com/opentracing/opentracing-rust"
description = "OpenTracing API for Rust"
documentation = "https://docs.rs/opentracing-api"
keywords = ["opentracing", "tracing"]

[badges]
maintenance = { status = "actively-developed" }